; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/uwb/extr_hwa-rc.c_hwarc_filter_event.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/uwb/extr_hwa-rc.c_hwarc_filter_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uwb_rc = type { i32 }
%struct.uwb_rceb = type { i32 }

@ENOANO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.uwb_rc*, %struct.uwb_rceb**, i64, i64*, i64*)* @hwarc_filter_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hwarc_filter_event(%struct.uwb_rc* %0, %struct.uwb_rceb** %1, i64 %2, i64* %3, i64* %4) #0 {
  %6 = alloca %struct.uwb_rc*, align 8
  %7 = alloca %struct.uwb_rceb**, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i64*, align 8
  %11 = alloca i32, align 4
  store %struct.uwb_rc* %0, %struct.uwb_rc** %6, align 8
  store %struct.uwb_rceb** %1, %struct.uwb_rceb*** %7, align 8
  store i64 %2, i64* %8, align 8
  store i64* %3, i64** %9, align 8
  store i64* %4, i64** %10, align 8
  %12 = load i32, i32* @ENOANO, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %11, align 4
  %14 = load %struct.uwb_rc*, %struct.uwb_rc** %6, align 8
  %15 = getelementptr inbounds %struct.uwb_rc, %struct.uwb_rc* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = icmp eq i32 %16, 256
  br i1 %17, label %18, label %25

18:                                               ; preds = %5
  %19 = load %struct.uwb_rc*, %struct.uwb_rc** %6, align 8
  %20 = load %struct.uwb_rceb**, %struct.uwb_rceb*** %7, align 8
  %21 = load i64, i64* %8, align 8
  %22 = load i64*, i64** %9, align 8
  %23 = load i64*, i64** %10, align 8
  %24 = call i32 @hwarc_filter_event_WUSB_0100(%struct.uwb_rc* %19, %struct.uwb_rceb** %20, i64 %21, i64* %22, i64* %23)
  store i32 %24, i32* %11, align 4
  br label %25

25:                                               ; preds = %18, %5
  %26 = load i32, i32* %11, align 4
  ret i32 %26
}

declare dso_local i32 @hwarc_filter_event_WUSB_0100(%struct.uwb_rc*, %struct.uwb_rceb**, i64, i64*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
